install/kubernetes/jd/bigmesh-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bigmesh-system
  labels:
    istio-injection: disabled
