install/kubernetes/jd/pfinder-client-istio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pfinder-test-client
  name: pfinder-test-client
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfinder-test-client
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"b2175ee5d0b21c64031a520cd777437486dfa906106b5ba5e7e0aeebb7a1a7b8","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
        traffic.sidecar.istio.io/includeInboundPorts: ""
      creationTimestamp: null
      labels:
        app: pfinder-test-client
      name: pfinder-test-client
      namespace: default
    spec:
      containers:
      - image: ishc.harbor.svc.hcyf.n.jd.local/jstenhance/pfinder-test-client:0.0.1
        imagePullPolicy: Always
        name: pfinder-test-client
        resources: {}
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/mosn
        - --serviceCluster
        - pfinder-test-client.$(POD_NAMESPACE)
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15010
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --concurrency
        - "2"
        - --controlPlaneAuthPolicy
        - NONE
        - --statusPort
        - "15020"
        - --applicationPorts
        - ""
        image: ishc.harbor.svc.hcyf.n.jd.local/jstenhance/proxyv2:0.5.0-rc.1
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            cpu: "2"
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      imagePullSecrets:
      - name: regsecret
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
